--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1254,8 +1254,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list modulepath_list\
             # loaded. First perform unload phase of the reload, prior mod load
             # to ensure these dependent modules are unloaded with the same
             # loaded prereq as when they were loaded
-            set depre_list [reloadModuleListUnloadPhase $depre_list {Unload\
-               of dependent _MOD_ failed} depre_un]
+            set depre_list [unloadDepUnDepReModules {} $depre_list]
             if {[info exists swprocessing]} {
                lprepend sw_depre_list {*}$depre_list
             }
@@ -1640,16 +1639,13 @@ proc cmdModuleUnload {context match auto force onlyureq args} {
                identityUReqUnFromDepRe $depre_list $unload_mod_list
             }
 
-            # Reload of all DepRe mods, as they may adapt from the mod unloads
-            # happening here. First perform unload phase of the reload, prior
-            # mod unloads to ensure these dependent mods are unloaded with the
-            # same loaded prereq as when they were loaded. Avoid modules not
-            # satisfying their constraint.
-            set depre_list [reloadModuleListUnloadPhase $depre_list {Unload\
-               of dependent _MOD_ failed} depre_un]
-
-            # DepUn modules unload prior main mod unload
-            unloadDepUnModules $depun_list $force
+            # Unload DepUn modules and unload DepRe modules (unload phase of
+            # their reload process). These modules are unloaded prior main mod
+            # unload and they are mixed to be unloaded in their reverse load
+            # order. They are unloaded this way prior eventually unloading any
+            # of their requirements.
+            set depre_list [unloadDepUnDepReModules $depun_list $depre_list\
+               $force]
          }
 
          # register this evaluation on the main one that triggered it (prior
