ts: add conflict_unload tests in 50/660

--- a/testsuite/modulefiles.4/.modulerc
+++ b/testsuite/modulefiles.4/.modulerc
@@ -70,3 +70,14 @@ if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
         }
     }
 }
+
+if {[info exists env(TESTSUITE_CONFLICT_UNLOAD)]} {
+    switch -- $env(TESTSUITE_CONFLICT_UNLOAD) {
+        dep_alias_variant_loading1 {
+            module-alias allconun lconun/1
+        }
+        multi_alias_conflict1 - multi_alias_unload1 {
+            module-alias alfoo foo/1.0
+        }
+    }
+}
