--- a/testsuite/modulefiles.4/foo/.modulerc
+++ b/testsuite/modulefiles.4/foo/.modulerc
@@ -7,3 +7,19 @@ if {[info exists env(TESTSUITE_SCAN)]} {
         }
     }
 }
+if {[info exists env(TESTSUITE_CONFLICT_UNLOAD)]} {
+    switch -- $env(TESTSUITE_CONFLICT_UNLOAD) {
+        sticky_conflict1 - sticky_conflict2 -\
+        dep_sticky_conflict1 - dep_sticky_conflict2 -\
+        sticky_unload1 - sticky_unload2 -\
+        dep_sticky_unload1 - dep_sticky_unload2 {
+            module-tag sticky foo/1.0
+        }
+        supersticky_conflict1 - supersticky_conflict2 -\
+        dep_supersticky_conflict1 - dep_supersticky_conflict2 -\
+        supersticky_unload1 - supersticky_unload2 -\
+        dep_supersticky_unload1 - dep_supersticky_unload2 {
+            module-tag super-sticky foo/1.0
+        }
+    }
+}
