--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -668,7 +668,7 @@ if {[catch {
    sourceSiteConfig
 
    setState supported_shells {sh bash ksh zsh csh tcsh fish cmd tcl perl\
-      python ruby lisp cmake r}
+      python ruby lisp cmake r pwsh}
 
    # Parse shell
    setState shell [lindex $argv 0]
