--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -21,8 +21,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core powershell
           # add package to run tests in an X-enabled environment
           sudo apt-get install -y xvfb x11-xserver-utils
       - name: Build Modules
@@ -74,8 +78,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -134,8 +142,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -197,10 +209,14 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish tcl8.6 perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
-          sudo apt-get install -y gcc autoconf tcl8.6-dev 
+          sudo apt-get install -y gcc autoconf tcl8.6-dev
       - name: Build Modules
         run: |
           ./configure $CONFIGURE_OPTS
@@ -252,8 +268,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.5
@@ -311,8 +331,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl8.7
@@ -358,8 +382,12 @@ jobs:
           fetch-depth: 0
       - name: Install system packages
         run: |
+          # add microsoft repository for powershell
+          curl -LJO https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          rm packages-microsoft-prod.deb
           sudo apt-get -y update
-          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core
+          sudo apt-get install -y expect-dev dejagnu python3-sphinx gzip bash tcsh ksh zsh fish perl python3 ruby cmake r-base-core powershell
           # libtclenvmodules build requirements
           sudo apt-get install -y gcc autoconf
           # manually install tcl9.0
