--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -726,7 +726,7 @@ if {[catch {
                set asked_paginate 0
             }
             --redirect {
-               if {[getState shelltype] ni {sh fish}} {
+               if {[getState shelltype] ni {sh fish pwsh}} {
                   reportWarning "Unsupported option '--redirect' on [getState\
                      shell] shell"
                } else {
